# templates

./: README.md  cargo-generate.toml
simpcli/: .envrc  .gitignore  Cargo.toml  README.md  cargo-generate.toml  flake.nix  rust-toolchain.toml
