[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2024"
description = "{{project-description}}"
homepage = "https://github.com/yilisharcs/{{project-name}}"
repository = "https://github.com/yilisharcs/{{project-name}}"
license = "GPL-3.0"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.29.0"

[profile]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[profile.release-tiny]
inherits = "release"
opt-level = "s"
